--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             Imagine you don't need a diet because we provide healthy and
             delicious food for you!
           </p>
-          <a class="btn" href="#">Order Food</a>
+          <a class="btn" href="https://thuising.github.io/protfolio_one/"
+            >Order Food</a
+          >
         </div>
         <div class="banner_right right">
           <img src="./images/shapes/main.png" alt="" />
@@ -47,7 +49,9 @@
             Hello,Iam Thui Sing owner of this Websites since 2000.If you want to
             know about me more and contact me please click Contact Me button.
           </p>
-          <a class="btn" href="#">Contact Me</a>
+          <a class="btn" href="https://thuising.github.io/protfolio_one/"
+            >Contact Me</a
+          >
         </div>
       </div>
     </section>
@@ -74,7 +78,9 @@
                 This recipe for Breakfast.If you want this recipe then read this
                 this blogs.
               </p>
-              <a class="btn" href="#">Read more</a>
+              <a class="btn" href="https://thuising.github.io/protfolio_one/"
+                >Read more</a
+              >
             </div>
           </div>
           <div class="item">
@@ -87,7 +93,9 @@
                 This recipe for Lunch.If you want this recipe then read this
                 this blogs.
               </p>
-              <a class="btn" href="#">Read more</a>
+              <a class="btn" href="https://thuising.github.io/protfolio_one/"
+                >Read more</a
+              >
             </div>
           </div>
           <div class="item">
@@ -100,7 +108,9 @@
                 This recipe for Dinner.If you want this recipe then read this
                 this blogs.
               </p>
-              <a class="btn" href="#">Read more</a>
+              <a class="btn" href="https://thuising.github.io/protfolio_one/"
+                >Read more</a
+              >
             </div>
           </div>
         </div>
