--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Food Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +49,7 @@
             Hello,Iam Thui Sing owner of this Websites since 2000.If you want to
             know about me more and contact me please click Contact Me button.
           </p>
-          <a class="btn" href="https://thuising.github.io/protfolio_one/"
+          <a class="btn" href="https://www.facebook.com/thuising0/"
             >Contact Me</a
           >
         </div>
