--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <div class="about_Right">
           <h1>About Me</h1>
           <p>
-            Hello,Iam Thui Sing owner of this Websites since 2000.If you want to
-            know about me more and contact me please click Contact Me button.
+            Hello,Iam <span> Thui Sing </span>owner of this Websites since
+            2000.If you want to know about me more and contact me please click
+            Contact Me button.
           </p>
           <a class="btn" href="https://www.facebook.com/thuising0/"
             >Contact Me</a
@@ -60,10 +61,8 @@
       <div class="rcp-top">
         <h1>My Recipes</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ipsam
-          sapiente, ullam ipsa ratione excepturi officiis architecto minus modi
-          iure necessitatibus voluptatum assumenda corporis voluptas fugit
-          similique odit placeat totam!
+          This recipes provide healthy and delicious food for you.If you want
+          know about my recipes then checkout my recipes items.
         </p>
       </div>
       <div class="rcp-bottom">
